<resources>
    <string name="app_name">Task 1.2 - 8.3 - Notification Scheduler</string>
    <string name="seconds">%1$d s</string>
    <string name="required_network_type">Network Type Required:</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">Wifi</string>
    <string name="requires">Requires:</string>
    <string name="device_idle">Device Idle</string>
    <string name="device_charging">Device Charging</string>
    <string name="override_deadline">Override Deadline:</string>
    <string name="not_set">Not set</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancel_jobs">Cancel Jobs</string>
    <string name="job_service">Job Service</string>
    <string name="job_running">Your Job ran to completion!</string>
    <string name="job_service_notification">Job Service notification</string>
    <string name="notification_channel_description">Notifications from Job Service</string>
    <string name="job_scheduled">Job Scheduled, will run when the constraints are met</string>
    <string name="no_constraint_toast">Please set at least one constraint</string>
    <string name="jobs_canceled">Jobs Canceled</string>
</resources>